--- a/lender-directory.html
+++ b/lender-directory.html
@@ -143,10 +143,10 @@
     </div>
 
 
-    <div class="inner-wraper">
+    <div class="inner-wraper lender_template">
       <div class="container">
         <!-- from here pagebuilder html start -->
-        <section class="img_text_card">
+        <section class="img_text_card ">
           <div class="container">
             <!-- <div class="row newsInRow"> -->
             <div class="row">
@@ -226,77 +226,68 @@
                 <div class="img_text_card_row row">
                   <div class="col-md-4  img_text_card_col">
                     <div class="text-img-wrap">
-                      <a href="#">
-                        <div class="img_card_block">
-                          <img src="img/card2.png" alt="">
-                        </div>
-                        <div class="text_card_block">
-                          <div class="category">Category</div>
+                      <div class="img_card_block">
+                        <img src="img/card2.png" alt="">
+                      </div>
+                      <div class="text_card_block">
+                        <div class="title">
                           <h3>Title of News Item</h3>
-                          <p>
-                            Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste
-                            natus
-                            error sit voluptartem accusantium doloremque.
-                          </p>
+                          <span class="badge">badge</span>
                         </div>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-md-4  img_text_card_col">
-                    <div class="text-img-wrap">
-                      <a href="#">
-                        <div class="img_card_block">
-                          <img src="img/card2.png" alt="">
-                        </div>
-                        <div class="text_card_block">
-                          <div class="category">Category</div>
-                          <h3>Title of News Item</h3>
-                          <p>
-                            Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste
-                            natus
-                            error sit voluptartem accusantium doloremque.
-                          </p>
-                        </div>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-md-4  img_text_card_col">
-                    <div class="text-img-wrap">
-                      <a href="#">
-                        <div class="img_card_block">
-                          <img src="img/card2.png" alt="">
-                        </div>
-                        <div class="text_card_block">
-                          <div class="category">Category</div>
-                          <h3>Title of News Item</h3>
-                          <p>
-                            Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste
-                            natus
-                            error sit voluptartem accusantium doloremque.
-                          </p>
-                        </div>
-                      </a>
-                    </div>
-                  </div>
-                  <div class="col-md-4  img_text_card_col">
-                    <div class="text-img-wrap">
-                      <a href="#">
-                        <div class="img_card_block">
-                          <img src="img/card2.png" alt="">
-                        </div>
-                        <div class="text_card_block">
-                          <div class="category">Category</div>
-                          <h3>Title of News Item</h3>
-                          <p>
-                            Culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste
-                            natus
-                            error sit voluptartem accusantium doloremque.
-                          </p>
-                        </div>
-                      </a>
-                    </div>
-                  </div>
+                        <p>
+                          <a class="doc_block" href="#"><img src="./img/call-blue.svg" alt="">12344363643</a>
+                          <a class="doc_block" href="#"><img src="./img/mail-blue.svg" alt="">test@mail.com</a>
+                          <a class="doc_block" href="#"><img src="./img/Link.svg" alt="">test@mail.com</a>
+                          <span class="d-block"><span><b>Programs: </b> </span>FHA, VA, Conventional</span>
+                          <span class="d-block"><span><b>Languages: </b></span>English, Spanish</span>
+                          <span class="d-block"><span><b>Counties: </b></span> Jefferson, Fayette</span>
+                        </p>
+                      </div>
 
+                    </div>
+                  </div>
+                  <div class="col-md-4  img_text_card_col">
+                    <div class="text-img-wrap">
+                      <div class="img_card_block">
+                        <img src="img/card2.png" alt="">
+                      </div>
+                      <div class="text_card_block">
+                        <div class="title">
+                          <div>
+                            <h3>Title of News Item</h3>
+                            <h4>ABC Mortgage</h4>
+                          </div>
+                          <span class="badge">badge</span>
+                        </div>
+                        <p>
+                          <span class="d-block"><span><b>NMLS </b> </span>#123456</span>
+                          <a class="doc_block" href="#"><img src="./img/call-blue.svg" alt="">12344363643</a>
+                          <a class="doc_block" href="#"><img src="./img/mail-blue.svg" alt="">test@mail.com</a>
+                          <a class="doc_block" href="#"><img src="./img/Link.svg" alt="">test@mail.com</a>
+                        </p>
+                      </div>
+
+                    </div>
+                  </div>
+                  <div class="col-md-4  img_text_card_col">
+                    <div class="text-img-wrap">
+                      <div class="img_card_block">
+                        <img src="img/card2.png" alt="">
+                      </div>
+                      <div class="text_card_block">
+                        <div class="title">
+                          <h3>Title of News Item</h3>
+                          <span class="badge">badge</span>
+                        </div>
+                        <p>
+                          <a class="doc_block" href="#"><img src="./img/call-blue.svg" alt="">12344363643</a>
+                          <a class="doc_block" href="#"><img src="./img/mail-blue.svg" alt="">test@mail.com</a>
+                          <a class="doc_block" href="#"><img src="./img/Link.svg" alt="">test@mail.com</a>
+                        </p>
+                      </div>
+
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
